--- a/GDRLauncher/GDRLauncher.csproj
+++ b/GDRLauncher/GDRLauncher.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="minidumpcount.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
