--- a/GDRLauncher/App.config
+++ b/GDRLauncher/App.config
@@ -4,5 +4,6 @@
     <add key="GDRPath" value="C:\Users\nuvov\Desktop\GDR\GDR.exe" />
     <add key="MinsToWait" value="0" />
     <add key="CheckVPN" value="0" />
+    <add key="CheckForBSOD" value="0" />
   </appSettings>
 </configuration>
